[gd_scene load_steps=13 format=3 uid="uid://ccw2womq20xyw"]

[ext_resource type="Texture2D" uid="uid://ce54tyqo6i701" path="res://Images/Misc/ElevatorFrame.png" id="1_eqq7t"]
[ext_resource type="Script" path="res://Scenes/Misc/elevator.gd" id="1_roeor"]
[ext_resource type="Texture2D" uid="uid://c3fikbiuxkj8y" path="res://Images/Misc/ElevatorDoors.png" id="2_tp53a"]
[ext_resource type="Texture2D" uid="uid://d2b77ue6xhymi" path="res://Images/Misc/InputPrompt.png.png" id="3_06mgg"]
[ext_resource type="AudioStream" uid="uid://14tclwdsomp7" path="res://Audio/SFX/ElevatorOpen.mp3" id="4_8hw6f"]
[ext_resource type="AudioStream" uid="uid://bklupn03boxyp" path="res://Audio/SFX/ElevatorClose.mp3" id="4_qbjpo"]
[ext_resource type="AudioStream" uid="uid://blin7ipissrt5" path="res://Audio/SFX/ElevatorDing.mp3" id="5_kn4u3"]

[sub_resource type="Animation" id="Animation_gn4ta"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Doors:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_unw66"]
resource_name = "close"
length = 3.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Doors:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Open")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_qbjpo")
}],
"times": PackedFloat32Array(-1.9)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_28cvc"]
resource_name = "open"
length = 3.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Doors:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Open")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_8hw6f")
}],
"times": PackedFloat32Array(-0.3)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbqlb"]
_data = {
"RESET": SubResource("Animation_gn4ta"),
"close": SubResource("Animation_unw66"),
"open": SubResource("Animation_28cvc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jp3jy"]
size = Vector2(6, 5)

[node name="Elevator" type="Area2D"]
script = ExtResource("1_roeor")

[node name="Frame" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_eqq7t")

[node name="Doors" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_tp53a")
hframes = 6
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tbqlb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 29.5)
shape = SubResource("RectangleShape2D_jp3jy")

[node name="Prompt" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -46)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_06mgg")

[node name="Ding" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kn4u3")
volume_db = -10.0
bus = &"SFX"

[node name="Open" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
